media2.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: media2
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: 'media2'
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: media
        image: docker.io/fusengine/apaxy:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: media
          mountPath: /app/web
          readOnly: true
      volumes:
      - name: media
        hostPath:
          path: /mnt/data/Media
---
apiVersion: v1
kind: Service
metadata:
  name: media2
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: media2
