service-router.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: router
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: router
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.1
    ports:
      - port: 80
