ingress-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    "ingress.kubernetes.io/auth-url": "https://auth.chimera.mickens.io/oauth2/auth"
    "ingress.kubernetes.io/auth-signin": "https://auth.chimera.mickens.io/oauth2/start?rd=$scheme://$best_http_host$request_uri"
  name: dashboard
  namespace: kube-system
spec:
  rules:
  - host: 'dashboard.chimera.mickens.io'
    http:
      paths:
      - path: /
        backend:
#          serviceName: kubernetes-dashboard
          serviceName: kubernetes-dashboard-head
          servicePort: 80
  tls:
  - hosts:
    - dashboard.chimera.mickens.io
    secretName: tls-dashboard-chimera-mickens-io
