ingress-media.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    "ingress.kubernetes.io/auth-url": "https://auth.chimera.mickens.io/oauth2/auth"
    "ingress.kubernetes.io/auth-signin": "https://auth.chimera.mickens.io/oauth2/start?rd=$scheme://$best_http_host$request_uri"
  name: media-chimera-mickens-io
  namespace: default
spec:
  rules:
  - host: 'media.chimera.mickens.io'
    http:
      paths:
      - path: /
        backend:
          serviceName: media
          servicePort: 80
  tls:
  - hosts:
    - media.chimera.mickens.io
    secretName: tls-media-chimera-mickens-io
